[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://pismo/Roboto-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 512.0
margin_top = 136.0
margin_right = 576.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
margin_left = 408.0
margin_top = 336.0
margin_right = 681.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 3 )
text = "Jsi připraven ke hře?"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
margin_left = 464.0
margin_top = 456.0
margin_right = 608.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="TextScoreLabel" type="Label" parent="."]
margin_left = 448.0
margin_top = 80.0
margin_right = 638.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Tvoje skóre je:"
align = 1
valign = 1

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
